# ml-kem

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  main.py  pyproject.toml
.github/workflows/: publish-to-test.yaml
docs/: auxiliary.rst  conf.py  index.rst  math.rst  mlkem.rst
mlkem/: benchmark.py  data_types.py  fast_k_pke.py  k_pke.py  kpke.py  matrix.py  ml_kem.py  ring_nq.py  ring_r_q.py  ring_t_q.py  ring_tq.py  ring_znq.py  types.py  zq.py
mlkem/auxiliary/: crypto.py  general.py  ntt.py  sampling.py
mlkem/math/: fastmathmodule.c  field.py  matrix.py  polynomial_ring.py  ring.py  ring_tq.py  ring_znq.py  zq.py
tests/: test_decaps.py  test_k_pke.py  test_kpke.py  test_matrix.py  test_ml_kem.py  test_ml_kem_key_gen.py  test_ring_nq.py  test_ring_r_q.py  test_ring_t_q.py  test_ring_tq.py  test_ring_znq.py
tests/auxiliary/: test_general.py  test_ntt.py
tests/math/: test_fastmath.py  test_matrix.py  test_polynomial_ring.py  test_ring.py  test_ring_tq.py
