[project]
name = "mlkem"
version = "0.0.1"
description = "A module-latice-based key-encapsulation mechanism."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.mypy]
exclude = ["tests/"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=mlkem --cov-report=term-missing --cov-fail-under=90"
